--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,9 +13,8 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 8.0.x
-      - name: Restore dependencies
-        run: dotnet restore
+
+      - name: Install dependencies
+        run: dotnet restore ./Qoopi.Waiter/Qoopi.Waiter.csproj
       - name: Build
-        run: dotnet build --no-restore
-      - name: Test
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet build ./Qoopi.Waiter/Qoopi.Waiter.csproj --configuration Release --no-restore
